--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html></html>
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -38,8 +38,8 @@
                 <button type="submit" class="continue-btn">Continue</button>
             </div>
             <a href="" class="reset-password">Reset password</a>
-            
         </form>
     </section>
+    <script type="module" src="script.js"></script>
 </body>
 </html>
